samples/bad/Imports/aml-10-missing-path-target/imports.mf
<imports>
  <package name="com.aras.innovator.solution.PLM" path="Missing\Import" />
</imports>
